Fixed "Add" button overflow
Before: https://olejka.ru/s/19087.png
After: https://olejka.ru/s/52189.png

--- a/assets/style.css
+++ b/assets/style.css
@@ -276,6 +276,7 @@ footer svg {
     height: 40px;
 }
 footer a.add{
+    background: var(--first-color);
     color: var(--alt-color);
     text-decoration: none;
     font-style: normal;
